--- a/static/css/company.css
+++ b/static/css/company.css
@@ -330,7 +330,7 @@ body{
     box-sizing: border-box;
     width: 100%;
     height: auto;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     padding: 20px;
     padding-top: 45px;
     padding-bottom: 0px;
@@ -456,7 +456,7 @@ p{
 }
 
 .company-rating{
-    margin-top: 45px;
+    margin-top: 20px;
     font-size: 14px;
     color: #a6a6a6;
     text-align: center;
